--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --check pages/**/*.{ts,js,tsx}",
-    "prettier:fix": "prettier --write pages/**/*.{ts,js,tsx}"
+    "prettier": "prettier --check {pages,components}/**/*.{ts,js,tsx}",
+    "prettier:fix": "prettier --write {pages,components}/**/*.{ts,js,tsx}"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.10.11",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
